--- a/staplesgotclass/Base.lproj/Main.storyboard
+++ b/staplesgotclass/Base.lproj/Main.storyboard
@@ -641,7 +641,7 @@
                             <rect key="frame" x="0.0" y="64" width="600" height="203"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxL-aK-9JY">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="wxL-aK-9JY">
                                     <rect key="frame" x="8" y="129" width="69" height="38"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="69" id="97B-kP-VY0"/>
@@ -759,7 +759,7 @@
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ArR-gb-af5">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="ArR-gb-af5">
                                     <rect key="frame" x="523" y="130" width="69" height="38"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="38" id="1n1-SW-1SG"/>
@@ -815,16 +815,16 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8:30 - 9:45" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NZC-4O-1vK">
-                                            <rect key="frame" x="511" y="24" width="81" height="27"/>
+                                            <rect key="frame" x="490" y="24" width="102" height="27"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="81" id="jYv-iO-g8Z"/>
+                                                <constraint firstAttribute="width" constant="102" id="jYv-iO-g8Z"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                             <color key="textColor" red="0.0" green="0.43137254899999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A.P. Computer Science" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W9b-wH-2sQ">
-                                            <rect key="frame" x="44" y="16" width="459" height="30"/>
+                                            <rect key="frame" x="44" y="16" width="432" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="43" id="SWa-rG-Pvl"/>
                                             </constraints>
@@ -850,7 +850,7 @@
                                         <constraint firstItem="vrU-vn-uig" firstAttribute="leading" secondItem="kjS-4z-UrJ" secondAttribute="leadingMargin" constant="-3" id="dUd-Te-RPB"/>
                                         <constraint firstItem="W9b-wH-2sQ" firstAttribute="centerY" secondItem="NZC-4O-1vK" secondAttribute="centerY" constant="-6.5" id="dqC-Dg-d9h"/>
                                         <constraint firstItem="W9b-wH-2sQ" firstAttribute="leading" secondItem="vrU-vn-uig" secondAttribute="trailing" constant="8" symbolic="YES" id="iBM-PM-Bzi"/>
-                                        <constraint firstItem="NZC-4O-1vK" firstAttribute="leading" secondItem="W9b-wH-2sQ" secondAttribute="trailing" constant="8" symbolic="YES" id="joK-RD-Fh0"/>
+                                        <constraint firstItem="NZC-4O-1vK" firstAttribute="leading" secondItem="W9b-wH-2sQ" secondAttribute="trailing" constant="14" id="joK-RD-Fh0"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -908,8 +908,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="NJv-Nk-3SU" kind="relationship" relationship="viewControllers" id="Qt7-MA-kff"/>
                         <segue destination="eCD-hb-3OC" kind="relationship" relationship="viewControllers" id="f7u-KM-dMl"/>
+                        <segue destination="NJv-Nk-3SU" kind="relationship" relationship="viewControllers" id="Qt7-MA-kff"/>
                         <segue destination="M81-PC-nEs" kind="relationship" relationship="viewControllers" id="LUq-5l-JMM"/>
                     </connections>
                 </tabBarController>
