--- a/staplesgotclass/Base.lproj/Main.storyboard
+++ b/staplesgotclass/Base.lproj/Main.storyboard
@@ -851,7 +851,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A.P. Computer Science" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W9b-wH-2sQ">
-                                            <rect key="frame" x="44" y="16" width="432" height="30"/>
+                                            <rect key="frame" x="55" y="16" width="421" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="43" id="SWa-rG-Pvl"/>
                                             </constraints>
@@ -864,11 +864,23 @@
                                                 </mask>
                                             </variation>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQM-KQ-ZJ8">
+                                            <rect key="frame" x="23" y="26" width="24" height="33"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="33" id="Cq9-df-0aX"/>
+                                                <constraint firstAttribute="width" constant="24" id="sMZ-CK-gcn"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
+                                            <color key="textColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="vrU-vn-uig" firstAttribute="baseline" secondItem="W9b-wH-2sQ" secondAttribute="baseline" constant="6" id="7FN-D0-r7n"/>
                                         <constraint firstItem="vrU-vn-uig" firstAttribute="top" secondItem="kjS-4z-UrJ" secondAttribute="topMargin" constant="-2" id="G4o-9c-T90"/>
                                         <constraint firstItem="NZC-4O-1vK" firstAttribute="top" secondItem="orF-q2-Pf4" secondAttribute="bottom" constant="2" id="L2C-z5-P5o"/>
+                                        <constraint firstAttribute="bottom" secondItem="xQM-KQ-ZJ8" secondAttribute="bottom" constant="3" id="LaI-dg-pDr"/>
+                                        <constraint firstItem="xQM-KQ-ZJ8" firstAttribute="leading" secondItem="kjS-4z-UrJ" secondAttribute="leading" constant="23" id="PM3-dj-tWp"/>
                                         <constraint firstItem="W9b-wH-2sQ" firstAttribute="firstBaseline" secondItem="NZC-4O-1vK" secondAttribute="firstBaseline" constant="-6" id="SkY-VL-fBK"/>
                                         <constraint firstItem="orF-q2-Pf4" firstAttribute="trailing" secondItem="NZC-4O-1vK" secondAttribute="trailing" id="Tu1-0A-eZv"/>
                                         <constraint firstItem="orF-q2-Pf4" firstAttribute="top" secondItem="kjS-4z-UrJ" secondAttribute="topMargin" constant="-5" id="UMm-AF-z0H"/>
@@ -876,12 +888,13 @@
                                         <constraint firstItem="vrU-vn-uig" firstAttribute="centerY" secondItem="kjS-4z-UrJ" secondAttribute="centerY" id="bNE-NY-EFm"/>
                                         <constraint firstItem="vrU-vn-uig" firstAttribute="leading" secondItem="kjS-4z-UrJ" secondAttribute="leadingMargin" constant="-3" id="dUd-Te-RPB"/>
                                         <constraint firstItem="W9b-wH-2sQ" firstAttribute="centerY" secondItem="NZC-4O-1vK" secondAttribute="centerY" constant="-6.5" id="dqC-Dg-d9h"/>
-                                        <constraint firstItem="W9b-wH-2sQ" firstAttribute="leading" secondItem="vrU-vn-uig" secondAttribute="trailing" constant="8" symbolic="YES" id="iBM-PM-Bzi"/>
+                                        <constraint firstItem="W9b-wH-2sQ" firstAttribute="leading" secondItem="vrU-vn-uig" secondAttribute="trailing" constant="19" id="iBM-PM-Bzi"/>
                                         <constraint firstItem="NZC-4O-1vK" firstAttribute="leading" secondItem="W9b-wH-2sQ" secondAttribute="trailing" constant="14" id="joK-RD-Fh0"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="classTitleLabel" destination="W9b-wH-2sQ" id="c8z-qN-ZNL"/>
+                                    <outlet property="lunchNumberLabel" destination="xQM-KQ-ZJ8" id="HFD-YU-xIF"/>
                                     <outlet property="periodNumberLabel" destination="vrU-vn-uig" id="m0E-M1-O0w"/>
                                     <outlet property="teacherLabel" destination="orF-q2-Pf4" id="kUp-hy-1Tg"/>
                                     <outlet property="timeLabel" destination="NZC-4O-1vK" id="duU-v0-4vH"/>
